@@ -13,13 +13,28 @@ public static class DuelMaidensCardsFactory
         public static VanguardCard DevotingJewelKnightTabitha => new VanguardCard(0, "Devoting Jewel Knight, Tabitha", 4000, 1, 5000, VanguardCardSkill.BOOST, VanguardTrigger.DRAW, []);
         public static VanguardCard ArdentJewelKnightPolli => new VanguardCard(0, "Ardent Jewel Knight, Polli", 5000, 1, 15000, VanguardCardSkill.BOOST, VanguardTrigger.HEAL, []);
 
+        // G1
         // Lake Maiden Lien
         public static VanguardCard SailorGuardianMichiru => new VanguardCard(1, "Sailor Guardian, Michiru", 7000, 1, 5000, VanguardCardSkill.BOOST, VanguardTrigger.NONE, []);
         public static VanguardCard LittleSageMarron => new VanguardCard(1, "Little Sage, Marron", 8000, 1, 10000, VanguardCardSkill.BOOST, VanguardTrigger.NONE, []);
+        public static VanguardCard KnightOfRoseMorgana => new VanguardCard(1, "Knight Of Rose, Morgana", 6000, 1, 5000, VanguardCardSkill.BOOST, VanguardTrigger.NONE, [
+            new VanguardAutomaticSkill(VanguardSkillCardLocation.VANGUARD | VanguardSkillCardLocation.REARGUARD, new OnAttackTiming(),
+                    new VanguardSkillCost{ Hand = 1 }, [
+                        new ProvidePowerToInvokerTurn(4000)
+                    ])
+        ]);
+        public static VanguardCard Wingal => new VanguardCard(1, "Wingal", 6000, 1, 5000, VanguardCardSkill.BOOST, VanguardTrigger.NONE, [
+            new VanguardAutomaticSkill(VanguardSkillCardLocation.VANGUARD | VanguardSkillCardLocation.REARGUARD, new OnBoostTiming(BlasterBlade.Name),
+            new VanguardSkillCost(), [
+                new ProvidePowerToInvokerTurn(4000)
+            ])
+        ]);
+
+        // G2
         public static VanguardCard KnightOfSilenceGallatin => new VanguardCard(2, "Knight of Silence, Gallatin", 10000, 1, 5000, VanguardCardSkill.NONE, VanguardTrigger.NONE, []);
         public static VanguardCard BlasterBlade => new VanguardCard(2, "Blaster Blade", 9000, 1, 5000, VanguardCardSkill.NONE, VanguardTrigger.NONE, [
             new VanguardCriticalEffectContinuousSkill(VanguardSkillCardLocation.VANGUARD, new OccupiedRearguards(4), 1),
-            new VanguardAutomaticSkill(VanguardSkillCardLocation.VANGUARD | VanguardSkillCardLocation.REARGUARD, 
+            new VanguardAutomaticSkill(VanguardSkillCardLocation.VANGUARD | VanguardSkillCardLocation.REARGUARD,
                 new OnPlaceTiming(), new VanguardSkillCost { CounterBlast = 1, SoulBlast = 1 }, [
                 new RetireFrontRow()
             ])
